Split into categories

--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
             <button id="btnAvailable">Налични</button>
             <button id="btnMandatory">Задължителни</button>
         </fieldset>
-        <fieldset>
+        <fieldset id="categories">
             <legend>Рецепти:</legend>
-            <button id="btnSoups">Супи</button>
-            <button id="btnMains">Основни</button>
         </fieldset>
     </header>
     <main></main>
