--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Store</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Cellar</title>
     <script type="module" src="js/main.js"></script>
-    <link rel="stylesheet" href="css/store.css">
+    <link rel="stylesheet" href="css/store.css" type="text/css">
 </head>
 
 <body>
