--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Cellar</title>
-    <script type="module" src="js/main.js"></script>
-    <link rel="stylesheet" href="css/store.css" type="text/css">
+    <script type="module" src="/js/main.js"></script>
+    <link rel="stylesheet" href="/css/store.css" type="text/css">
 </head>
 
 <body>
