Redesigned to use new router

--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Cellar</title>
-    <script type="module" src="/js/main.js"></script>
-    <link rel="stylesheet" href="/css/store.css" type="text/css">
+    <script type="module" src="/js/index.js"></script>
+    <link rel="stylesheet" href="/css/site.css" type="text/css">
+    <link rel="stylesheet" href="/css/catalog.css" type="text/css">
 </head>
 
 <body>
-    <header>
-        <fieldset>
-            <legend>Съставки:</legend>
-            <button id="btnStaples">Универсални</button>
-            <button id="btnBanned">Забранени</button>
-            <button id="btnAvailable">Налични</button>
-            <button id="btnMandatory">Задължителни</button>
-        </fieldset>
-        <fieldset id="categories">
-            <legend>Рецепти:</legend>
-        </fieldset>
-    </header>
-    <main></main>
+    <div id="content">
+        <header>
+            <nav id="nav-main"></nav>
+            <nav id="nav-sub"></nav>
+        </header>
+        <main>
+            Loading &hellip;
+        </main>
+    </div>
 </body>
 
 </html>
