UX and routing improvements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="/js/index.js"></script>
     <link rel="stylesheet" href="/css/site.css" type="text/css">
     <link rel="stylesheet" href="/css/catalog.css" type="text/css">
+    <link rel="stylesheet" href="/css/util.css" type="text/css">
 </head>
 
 <body>
