Scroll-top-top button & style improvements

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <nav id="nav-main"></nav>
             <nav id="nav-sub"></nav>
         </header>
-        <main>
+        <main class="border-main">
             Loading &hellip;
         </main>
     </div>
