Added cache control

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <title>Food Cellar</title>
+    
     <script type="module" src="/js/index.js"></script>
     <link rel="stylesheet" href="/css/site.css" type="text/css">
     <link rel="stylesheet" href="/css/catalog.css" type="text/css">
